macrostructure: cta build-up + nav,content, player

--- a/index.html
+++ b/index.html
@@ -9,31 +9,36 @@
     <title>Spotify</title>
   </head>
   <body>
-    <!-- HEADER/ CALL TO ACTION FOR REGISTRATION -->
-    <header class="container-flex">
+    <div class="container-flex">
 
-    </header>
-
-
-    <main class="container-flex">
-
-      <!-- navigation menu/playlist menu -->
-      <div class="menu">
-
-      </div>
-
-      <!-- central page with overflow scroll -->
-      <div class="">
-
-      </div>
+      <!-- HEADER/ CALL TO ACTION FOR REGISTRATION -->
+      <header class="container-flex">
+        <div class="">
+          <button type="button" name="button">EFFETTUA ORA L'UPGRADE</button>
+        </div>
+      </header>
 
 
-      <!-- player bar -->
-      <div class="player">
+      <main class="container-flex">
 
-      </div>
-    </main>
+        <!-- navigation menu/playlist menu -->
+        <div class="menu">
 
+        </div>
+
+        <!-- central page with overflow scroll -->
+        <div class="central-content">
+
+        </div>
+
+
+        <!-- player bar -->
+        <div class="player">
+
+        </div>
+      </main>
+
+    </div>
 
   </body>
 </html>
