central content: init no details
first attempts on the central content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Spotify</title>
   </head>
   <body>
-    <div class="container-flex">
 
       <!-- HEADER/ CALL TO ACTION FOR REGISTRATION -->
       <main class="container-flex">
@@ -54,7 +53,7 @@
           <a href="#">Nuova Playlist</a>
           <a href="#">Nuova Playlist</a>
           <a href="#">Nuova Playlist</a>
-          
+
 
           <!-- fixed login/cta box -->
           <div id="profile-signin">
@@ -71,19 +70,106 @@
         </div>
 
 
-        <div class="cta">
+        <div class="cta-top">
           <button type="button" name="button">EFFETTUA ORA L'UPGRADE</button>
         </div>
 
 
-
-
-
         <!-- central page with overflow scroll -->
         <div class="central-content">
+          <nav class="">
+            <ul>
+              <li>
+                <a href="#"> IN EVIDENZA </a>
+                <div class="green-bar-active">
+                </div>
+              </li>
+              <li>
+                <a href="#"> PODCAST </a>
+                <div class="green-bar">
+                </div>
+              </li>
+              <li>
+                <a href="#"> CLASSIFICHE </a>
+                <div class="green-bar">
+                </div>
+              </li>
+              <li>
+                <a href="#"> GENERI E MOOD </a>
+                <div class="green-bar">
+                </div>
+              </li>
+              <li>
+                <a href="#"> NUOVE USCITE </a>
+                <div class="green-bar">
+                </div>
+              </li>
+              <li>
+                <a href="#"> SCOPRI </a>
+                <div class="green-bar">
+                </div>
+              </li>
+            </ul>
+          </nav>
+          <h2>Recently played</h2>
+
+          <!-- riga con cover playlist/artisti/album musicali -->
+
+          <section class="music-cover">
+            <div class="cover-card">
+              <img src="img/metal_lifting.jpg" alt="cover playlist musica metal">
+              <h3>Heavy Metal</h3>
+              <h4>Various Artists</h4>
+            </div>
+
+            <div class="cover-card">
+              <img src="img/stranger.jpeg" alt="cover playlist stranger things">
+              <h3>Stranger Things Vol.1 (a Netflix Original Series Soundtrack)</h3>
+              <h4>Kyle Dixon & Michael Stein</h4>
+            </div>
+
+            <div class="cover-card">
+              <img src="img/aquietplace.jpeg" alt="cover playlist a quiet place ost">
+              <h3>A Quiet Place</h3>
+              <h4>Various Artists</h4>
+            </div>
+
+            <div class="cover-card">
+              <img src="img/split.jpeg" alt="cover playlist split ost">
+              <h3>Split</h3>
+              <h4>Various Artists</h4>
+            </div>
+
+            <div class="cover-card">
+              <img src="img/player_left.jpg" alt="cover playlist qua ci doveva essere La Cura del Benessere ma nella cartella nun ce sta">
+              <h3>A cure for wellness</h3>
+              <h4>Various Artists</h4>
+            </div>
+
+            <div class="cover-card">
+              <img src="img/sinister.jpeg" alt="cover playlist sinister ost">
+              <h3>Sinister</h3>
+              <h4>Various Artists</h4>
+            </div>
+          </section>
+
+          <!-- seconda row, "creato per te" -->
+          <section class="">
+            <h2>Creato per te</h2>
+            <h4>Più ascolti, più accurati saranno i suggerimenti.</h4>
+            <div class="music-cover">
+              <div class="cover-card">
+                <img src="img/radar.jpeg" alt="release radar">
+                <h3>Release Radar</h3>
+              </div>
+              <div class="cover-card">
+                <img src="img/mixdaily.jpeg" alt="Daily Mix number 1">
+                <h3>Daily Mix 1</h3>
+              </div>
+            </div>
+          </section>
 
         </div>
-
 
         <!-- player bar -->
         <div class="player">
@@ -91,7 +177,6 @@
         </div>
       </main>
 
-    </div>
 
   </body>
 </html>
