added player bar (all no details)

--- a/index.html
+++ b/index.html
@@ -40,19 +40,21 @@
 
           <!-- playlist box -->
           <h2>PLAYLIST</h2>
-          <div class="">
-            <i class="fas fa-plus"></i>
+          <div class="side-bar">
+            <div class="">
+              <i class="fas fa-plus"></i>
+              <a href="#">Nuova Playlist</a>
+            </div>
+            <a href="#">Nuova Playlist</a>
+            <a href="#">Nuova Playlist</a>
+            <a href="#">Nuova Playlist</a>
+            <a href="#">Nuova Playlist</a>
+            <a href="#">Nuova Playlist</a>
+            <a href="#">Nuova Playlist</a>
+            <a href="#">Nuova Playlist</a>
+            <a href="#">Nuova Playlist</a>
             <a href="#">Nuova Playlist</a>
           </div>
-          <a href="#">Nuova Playlist</a>
-          <a href="#">Nuova Playlist</a>
-          <a href="#">Nuova Playlist</a>
-          <a href="#">Nuova Playlist</a>
-          <a href="#">Nuova Playlist</a>
-          <a href="#">Nuova Playlist</a>
-          <a href="#">Nuova Playlist</a>
-          <a href="#">Nuova Playlist</a>
-          <a href="#">Nuova Playlist</a>
 
 
           <!-- fixed login/cta box -->
@@ -169,14 +171,74 @@
             </div>
           </section>
 
+          <section>
+            <h2>Artisti più popolari</h2>
+            <h4>Più ascolti, più accurati saranno i tuoi sugerimenti</h4>
+            <div class="music-cover">
+              <div class="cover-card">
+                <img src="" alt="">
+                <h3></h3>
+              </div>
+
+              <div class="cover-card">
+                <img src="" alt="">
+                <h3></h3>
+              </div>
+            </div>
+
+          </section>
+
         </div>
 
-        <!-- player bar -->
-        <div class="player">
 
-        </div>
       </main>
 
+      <!-- player bar -->
+      <div class="player">
+        <div class="music-data">
+          <img src="img/sinister.jpeg" alt="">
+          <div class="">
+            <h5>Sinister</h5>
+            <h6>Various Artists</h6>
+          </div>
+          <i class="far fa-heart"></i>
+          <i class="far fa-folder"></i>
+        </div>
 
+        <!-- barra di scorrimento  -->
+        <div class="music-bar">
+          <div class="icons">
+            <i class="fas fa-random"></i>
+            <i class="fas fa-step-backward"></i>
+            <i class="far fa-play-circle"></i>
+            <i class="fas fa-step-forward"></i>
+            <i class="fas fa-redo-alt"></i>
+          </div>
+          <div class="bar">
+            <span> 0:25 </span>
+            <div class="progression-bar">
+              <div class="progression-bar-active">
+                <div class="pointer">
+
+                </div>
+              </div>
+            </div>
+            <span> 4:35 </span>
+          </div>
+        </div>
+
+        <div class="volume-bar">
+          <i class="fas fa-bars"></i>
+          <i class="fas fa-desktop"></i>
+          <i class="fas fa-volume-up"></i>
+          <div class="progression-bar">
+            <div class="progression-bar-active">
+              <div class="pointer">
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
