sidebar minor details

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
         <!-- navigation menu/playlist menu -->
 
         <div class="menu">
-          <span id="logo">
+          <a id="logo">
             <img src="img/logo.svg" alt="logo spotify">
-          </span>
+          </a>
 
           <!-- home button -->
           <div class="">
             <img src="img/home.svg" alt="home button">
-            <span>Home</span>
+            <a href="#">Home</a>
           </div>
 
           <!-- search button -->
           <div class="">
             <img src="img/search.svg" alt="search button">
-            <span>Cerca</span>
+            <a href="#">Cerca</a>
           </div>
 
           <!-- my stuff button -->
           <div class="">
             <img src="img/libreria.svg" alt="libreria">
-            <span>La Tua Libreria</span>
+            <a href="#">La Tua Libreria</a>
           </div>
 
           <!-- playlist box -->
