main: navbar + button + central content
minor details, still to add hover on cover art and adjust media queries

--- a/index.html
+++ b/index.html
@@ -87,29 +87,39 @@
                 </div>
               </li>
               <li>
-                <a href="#"> PODCAST </a>
-                <div class="green-bar">
-                </div>
+                <a href="#"> PODCAST
+                  <div class="green-bar">
+                  </div>
+              </a>
+
               </li>
               <li>
-                <a href="#"> CLASSIFICHE </a>
-                <div class="green-bar">
-                </div>
+                <a href="#"> CLASSIFICHE
+                  <div class="green-bar">
+                  </div>
+                </a>
+
               </li>
               <li>
-                <a href="#"> GENERI E MOOD </a>
-                <div class="green-bar">
-                </div>
+                <a href="#"> GENERI E MOOD
+                  <div class="green-bar">
+                  </div>
+                </a>
+
               </li>
               <li>
-                <a href="#"> NUOVE USCITE </a>
-                <div class="green-bar">
-                </div>
+                <a href="#"> NUOVE USCITE
+                  <div class="green-bar">
+                  </div>
+                </a>
+
               </li>
               <li>
-                <a href="#"> SCOPRI </a>
-                <div class="green-bar">
-                </div>
+                <a href="#"> SCOPRI
+                  <div class="green-bar">
+                  </div>
+                </a>
+
               </li>
             </ul>
           </nav>
@@ -159,7 +169,7 @@
           <section class="">
             <h2>Creato per te</h2>
             <h4>Più ascolti, più accurati saranno i suggerimenti.</h4>
-            <div class="music-cover">
+            <div class="music-cover-suggest">
               <div class="cover-card">
                 <img src="img/radar.jpeg" alt="release radar">
                 <h3>Release Radar</h3>
@@ -171,18 +181,18 @@
             </div>
           </section>
 
-          <section>
+          <section id="rounded-pics">
             <h2>Artisti più popolari</h2>
             <h4>Più ascolti, più accurati saranno i tuoi sugerimenti</h4>
-            <div class="music-cover">
+            <div class="music-cover-suggest">
               <div class="cover-card">
-                <img src="" alt="">
-                <h3></h3>
+                <img src="img/youg.jpeg" alt="album cover lana del rey the grat gatsby">
+                <h3>Lana del Rey</h3>
               </div>
 
               <div class="cover-card">
-                <img src="" alt="">
-                <h3></h3>
+                <img src="img/einaudi.jpeg" alt="cover artist ludovico einaudi">
+                <h3>Ludovico Einaudi</h3>
               </div>
             </div>
 
