--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </a>
 
           <!-- home button -->
-          <div class="">
+          <div id="home">
             <img src="img/home.svg" alt="home button">
             <a href="#">Home</a>
           </div>
@@ -228,9 +228,9 @@
             <span> 0:25 </span>
             <div class="progression-bar">
               <div class="progression-bar-active">
-                <div class="pointer">
-
-                </div>
+              </div>
+              <div class="pointer">
+                <i class="fas fa-circle"></i>
               </div>
             </div>
             <span> 4:35 </span>
@@ -244,7 +244,7 @@
           <div class="progression-bar">
             <div class="progression-bar-active">
               <div class="pointer">
-
+                <i class="fas fa-circle"></i>
               </div>
             </div>
           </div>
