media queries + wrap + general details

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
         <!-- navigation menu/playlist menu -->
 
         <div class="menu">
+          <!-- menu when viewporw < 568px -->
+          <aside class="grow">
+            <img src="img/logo-small.svg" alt="" class="xs">
+            <img src="img/home.svg" alt="home button" class="xs">
+            <img src="img/search.svg" alt="search button" class="xs">
+            <img src="img/libreria.svg" alt="libreria" class="xs">
+          </aside>
+          
           <a id="logo">
             <img src="img/logo.svg" alt="logo spotify">
           </a>
@@ -58,6 +66,8 @@
 
 
           <!-- fixed login/cta box -->
+          <img src="img/download.svg" alt="simbolo download" class="xs">
+          <img src="img/profile.svg" alt="simbolo profilo" class="xs">
           <div id="profile-signin">
             <div class="">
               <img src="img/download.svg" alt="simbolo download">
@@ -129,36 +139,54 @@
 
           <section class="music-cover">
             <div class="cover-card">
+              <div class="overlay">
+                <i class="far fa-play-circle"></i>
+              </div>
               <img src="img/metal_lifting.jpg" alt="cover playlist musica metal">
               <h3>Heavy Metal</h3>
               <h4>Various Artists</h4>
             </div>
 
             <div class="cover-card">
+              <div class="overlay">
+                <i class="far fa-play-circle"></i>
+              </div>
               <img src="img/stranger.jpeg" alt="cover playlist stranger things">
               <h3>Stranger Things Vol.1 (a Netflix Original Series Soundtrack)</h3>
               <h4>Kyle Dixon & Michael Stein</h4>
             </div>
 
             <div class="cover-card">
+              <div class="overlay">
+                <i class="far fa-play-circle"></i>
+              </div>
               <img src="img/aquietplace.jpeg" alt="cover playlist a quiet place ost">
               <h3>A Quiet Place</h3>
               <h4>Various Artists</h4>
             </div>
 
             <div class="cover-card">
+              <div class="overlay">
+                <i class="far fa-play-circle"></i>
+              </div>
               <img src="img/split.jpeg" alt="cover playlist split ost">
               <h3>Split</h3>
               <h4>Various Artists</h4>
             </div>
 
             <div class="cover-card">
+              <div class="overlay">
+                <i class="far fa-play-circle"></i>
+              </div>
               <img src="img/player_left.jpg" alt="cover playlist qua ci doveva essere La Cura del Benessere ma nella cartella nun ce sta">
               <h3>A cure for wellness</h3>
               <h4>Various Artists</h4>
             </div>
 
             <div class="cover-card">
+              <div class="overlay">
+                <i class="far fa-play-circle"></i>
+              </div>
               <img src="img/sinister.jpeg" alt="cover playlist sinister ost">
               <h3>Sinister</h3>
               <h4>Various Artists</h4>
